Added the swedish language

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+</head>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +10,10 @@
   <body>
     <div class="container">
       <button id="start-btn">Press and talk</button>
+      <select id="language-select">
+        <option value="en-US">English</option>
+        <option value="sv-SE">Swedish</option>
+      </select>
     </div>
     <div id="result"></div>
     <script src="app.js"></script>
